--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
     />
 
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
     <main>
       <section class="cards">
-        <article class="feedback">
+        <article class="feedback card1">
           <figure class="feedback_author">
             <img
               src="./images/image-daniel.jpg"
@@ -48,7 +49,7 @@
           </blockquote>
         </article>
 
-        <article class="feedback">
+        <article class="feedback card2">
           <figure class="feedback_author">
             <img
               src="./images/image-jonathan.jpg"
@@ -73,7 +74,7 @@
           </blockquote>
         </article>
 
-        <article class="feedback">
+        <article class="feedback card3">
           <figure class="feedback_author">
             <img
               src="./images/image-jeanette.jpg"
@@ -96,7 +97,7 @@
           </blockquote>
         </article>
 
-        <article class="feedback">
+        <article class="feedback card4">
           <figure class="feedback_author">
             <img
               src="./images/image-patrick.jpg"
@@ -126,7 +127,7 @@
           </blockquote>
         </article>
 
-        <article class="feedback">
+        <article class="feedback card5">
           <figure class="feedback_author">
             <img src="./images/image-kira.jpg" alt="Foto de Kira Whittle" />
             <figcaption>
