feat: adiciona rodape no site e o estiliza

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             </figcaption>
           </figure>
 
-          <p class="title">
+          <h1 class="title">
             I received a job offer mid-course, and the subjects I learned were
             current, if not more so, in the company I joined. I honestly feel I
             got every penny’s worth.
-          </p>
+          </h1>
 
           <blockquote class="feedback_quote">
             <p>
@@ -61,9 +61,9 @@
             </figcaption>
           </figure>
 
-          <p class="title">
+          <h1 class="title">
             The team was very supportive and kept me motivated
-          </p>
+          </h1>
 
           <blockquote class="feedback_quote">
             <p>
@@ -86,7 +86,7 @@
             </figcaption>
           </figure>
 
-          <p class="title">An overall wonderful and rewarding experience</p>
+          <h1 class="title">An overall wonderful and rewarding experience</h1>
 
           <blockquote class="feedback_quote">
             <p>
@@ -109,11 +109,11 @@
             </figcaption>
           </figure>
 
-          <p class="title">
+          <h1 class="title">
             Awesome teaching support from TAs who did the bootcamp themselves.
             Getting guidance from them and learning from their experiences was
             easy.
-          </p>
+          </h1>
 
           <blockquote class="feedback_quote">
             <p>
@@ -136,9 +136,9 @@
             </figcaption>
           </figure>
 
-          <p class="title">
+          <h1 class="title">
             Such a life-changing experience. Highly recommended!
-          </p>
+          </h1>
 
           <blockquote class="feedback_quote">
             <p>
@@ -158,6 +158,13 @@
           </blockquote>
         </article>
       </section>
+
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="https://github.com/jose-wolf">José Wolf</a>.
+      </div>
     </main>
   </body>
 </html>
