refactor: corrige estrutura html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
-    <main>
+    <div class="main">
       <section class="cards">
         <article class="feedback card1">
           <figure class="feedback_author">
@@ -158,7 +158,7 @@
           </blockquote>
         </article>
       </section>
-    </main>
+    </div>
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
