feat: adiciona um h1 e o estiliza

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
-    <div class="main">
+    <main class="main">
+      <h1 class="sr-only">Depoimentos da comunidade</h1>
+
       <section class="cards">
         <article class="feedback card1">
           <figure class="feedback_author">
@@ -30,11 +32,11 @@
             </figcaption>
           </figure>
 
-          <h1 class="title">
+          <p class="title">
             I received a job offer mid-course, and the subjects I learned were
             current, if not more so, in the company I joined. I honestly feel I
             got every penny’s worth.
-          </h1>
+          </p>
 
           <blockquote class="feedback_quote">
             <p>
@@ -61,9 +63,9 @@
             </figcaption>
           </figure>
 
-          <h2 class="title">
+          <p class="title">
             The team was very supportive and kept me motivated
-          </h2>
+          </p>
 
           <blockquote class="feedback_quote">
             <p>
@@ -86,7 +88,7 @@
             </figcaption>
           </figure>
 
-          <h2 class="title">An overall wonderful and rewarding experience</h2>
+          <p class="title">An overall wonderful and rewarding experience</p>
 
           <blockquote class="feedback_quote">
             <p>
@@ -109,11 +111,11 @@
             </figcaption>
           </figure>
 
-          <h2 class="title">
+          <p class="title">
             Awesome teaching support from TAs who did the bootcamp themselves.
             Getting guidance from them and learning from their experiences was
             easy.
-          </h2>
+          </p>
 
           <blockquote class="feedback_quote">
             <p>
@@ -136,9 +138,9 @@
             </figcaption>
           </figure>
 
-          <h2 class="title">
+          <p class="title">
             Such a life-changing experience. Highly recommended!
-          </h2>
+          </p>
 
           <blockquote class="feedback_quote">
             <p>
@@ -158,12 +160,12 @@
           </blockquote>
         </article>
       </section>
-    </div>
-    <div class="attribution">
+    </main>
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="https://github.com/jose-wolf">José Wolf</a>.
-    </div>
+    </footer>
   </body>
 </html>
